--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,8 @@ body::-webkit-scrollbar {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional shadow */
   
 }
-.home-section {
+.home-section,
+.about-section {
   padding-top: 100px; /* Adjust based on the nav bar height */
 }
 .nav-button {
