--- a/src/App.css
+++ b/src/App.css
@@ -469,6 +469,8 @@ body.case-study-active {
     width: 90% !important;
     padding: 10vw 5vw 5vw; /* Increased top padding */
     margin-top: 5vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
   }
 
   .case-study-intro .case-study-text h1 {
@@ -484,13 +486,13 @@ body.case-study-active {
   }
 
   .case-study-intro .case-study-image {
-    width: 90px !important;
+    width: 100% !important;
     order: 2 !important; /* Ensures only the intro image moves below */
     margin-top: 3vw !important;
   }
 
   .case-study-intro .case-study-image img {
-    max-width: 90px !important;
+    max-width: 300px !important;
   }
 }
 .research {
